--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
   display: flex;
   width: 100vw;
   height: 100vh;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   padding-top: 60px;
 }
 
@@ -29,4 +30,14 @@ button {
 
 .err {
   color: red;
+}
+.div {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+}
+.inner {
+  padding: 13px;
+  margin-bottom: 8px;
+  border: 1px solid black;
 }
